Fix a bug with modal popup on mobile version

--- a/rando/static/css/style.less
+++ b/rando/static/css/style.less
@@ -2062,7 +2062,7 @@ a.accordion-toggle  {
         display: block;
         border-bottom: 1px solid #CCC;
 
-        a {
+        .btn {
           color: #333 !important;
           background: none !important;
           .box-shadow(none) !important;
